<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:background="@drawable/app_background"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn_priv_room"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape_button"
        android:text="@string/btn_priv_room"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_pub_room"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape_button"
        android:text="@string/btn_pub_room"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btn_priv_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_local_game"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape_button"
        android:text="@string/btn_local_game"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_priv_room" />

</androidx.constraintlayout.widget.ConstraintLayout>