<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.localGameModes.CardPlayerActivity">

    <TextView
        android:id="@+id/tv_card1"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:background="#D2000000"
        android:gravity="center"
        android:text="@string/tv_card1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tv_card3"
        app:layout_constraintEnd_toStartOf="@+id/tv_card2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_card2"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:background="#D2000000"
        android:gravity="center"
        android:text="@string/tv_card2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tv_card4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_card1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_card3"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginBottom="84dp"
        android:background="#D2000000"
        android:gravity="center"
        android:text="@string/tv_card3"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_card4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card1" />

    <TextView
        android:id="@+id/tv_card4"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginBottom="84dp"
        android:background="#D2000000"
        android:gravity="center"
        android:text="@string/tv_card4"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_card3"
        app:layout_constraintTop_toBottomOf="@+id/tv_card2" />

    <Button
        android:id="@+id/btn_change_cards"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_shape_button"
        android:text="@string/btn_change_cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card4" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/tv_card1"
        app:layout_constraintTop_toBottomOf="@+id/tv_card1"
        app:srcCompat="@drawable/ic_logo_foreground" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/tv_card2"
        app:layout_constraintTop_toBottomOf="@+id/tv_card2"
        app:srcCompat="@drawable/ic_logo_foreground" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/tv_card3"
        app:layout_constraintTop_toBottomOf="@+id/tv_card3"
        app:srcCompat="@drawable/ic_logo_foreground" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/tv_card4"
        app:layout_constraintTop_toBottomOf="@+id/tv_card4"
        app:srcCompat="@drawable/ic_logo_foreground" />

    <TextView
        android:id="@+id/tv_app_name1"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/tv_card1" />

    <TextView
        android:id="@+id/tv_app_name2"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_card2" />

    <TextView
        android:id="@+id/tv_app_name3"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_card3" />

    <TextView
        android:id="@+id/tv_app_name4"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="#D2000000"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_card4" />
</androidx.constraintlayout.widget.ConstraintLayout>